test/tests/stages/16_characters_and_strings/invalid_types/char_and_schar_conflict.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[20]:
  char
  identifier(c)
  =
  const int(10)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  extern
  signed
  char
  identifier(c)
  ;
  return
  identifier(c)
  ;
  }
